# a-synthe

./: .gitignore  .gitmodules  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  build.rs
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: index.html  index.md  licenses.html  mac.html  windows.html
release/: readme.txt
src/: lib.rs  main.rs  midi.rs  misc.rs  notes.csv  sys.rs  ui.rs
src/sys/: calculation.rs  mod.rs  note.rs
static/: licenses-mac.html  licenses.html  readme.txt
