[package]
name = "a_synthe"
version = "0.2.0-beta1"
authors = ["tasuren <tasuren@outlook.jp>"]
edition = "2021"
description = "音程を検出するソフトです。"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://tasuren.xyz/works/a_synthe/"
repository = "https://github.com/tasuren/aSynthe"
keywords = ["application", "sound"]
rust-version = "1.71.0"

[dependencies]
rustfft = "6.1.0"
midir = "0.9.1"
cpal = "0.15.2"
arc-swap = "1.6.0"
libui = "0.3.0"
dialog-unwrapper = { path = "deps/dialog-unwrapper" }
anyhow = "1.0.75"

[target.'cfg(target_os="windows")'.build-dependencies]
tauri-winres = "0.1.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.bundle]
name = "aSynthe"
identifier = "xyz.tasuren.asynthe"
icon = ["static/icon/main.png"]
copyright = "(c) 2022 Takagi Tasuku"
category = "public.app-category.utilities"
short_description = "音程を検出するためのソフトです。"
long_description = """音程を検出するためのソフトです。
あまり使い物になりませんが、MIDIデバイスとしても使えます。"""

[package.metadata.winres]
OriginalFilename = "aSynthe.exe"
LegalCopyright = "(c) 2022 Takagi Tasuku"
